vpc.tf
# =====================
# AWS VPC
# =====================
resource "aws_vpc" "main" {
  cidr_block           = var.aws_vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "my-vpc-01"
  }
}
